# Hybridyzer

./: .gitignore  CLAUDE.md  EDGE_IMPROVEMENT_TODO.txt  QUICKSTART.txt  README.md  agent_context.md  backtest.py  diagnostic.py  environment.runpod.yml  inference.py  main.py  pyproject.toml  requirements.txt  requirements_runpod.txt  setup_runpod.sh  train.py  upload_to_runpod.ps1
core/: __init__.py  feature_store.py  final_signal.py  hybrid_engine.py  labeling.py  profiles.py  regime_detector.py  risk_layer.py  scalers.py  signal_blender.py  training_utils.py
data/: btc_data_loader.py  convert_1m_to_5m.py
models/: regime_detector.pkl  selected_features_directionblender.txt  signal_blender.pkl  training_manifest.json
modules/: __init__.py  base.py  linreg_channel.py  ohlcv_context.py  pivots_rsi.py  pvt_eliminator.py  superma.py  trendmagic.py
results/: confusion_direction.csv  confusion_regime.csv  confusion_signal.csv  validation_metrics.json  wsl_train_20251226_135710.err
results/grid/20251227_031252/: grid_summary.csv
results/grid/20251227_031252/h12_s12/models/: training_results.csv
results/grid/20251227_031252/h12_s6/models/: training_results.csv
results/grid/20251227_031252/h12_s8/models/: training_results.csv
results/nightly/20260107_033815/: runs.jsonl
results/nightly/20260107_034427/: runs.jsonl
results/nightly/20260107_034427/run_001/: training_manifest.json
results/nightly/20260107_034427/run_002/: training_manifest.json
results/nightly/20260107_034427/run_003/: training_manifest.json
results/nightly/20260107_034427/run_004/: training_manifest.json
results/nightly/20260107_034427/run_005/: training_manifest.json
results/nightly/20260107_034427/run_006/: training_manifest.json  training_results.csv
results/nightly/20260107_034427/run_007/: training_manifest.json
results/nightly/20260107_034427/run_008/: training_manifest.json
results/nightly/20260107_034427/run_009/: training_manifest.json
results/nightly/20260107_034427/run_010/: training_manifest.json
results/nightly/20260107_034427/run_011/: config.json  training_manifest.json  training_results.csv
results/nightly/20260107_034427/run_012/: config.json  training_manifest.json
results/nightly/20260107_034427/run_013/: config.json  training_manifest.json
results/nightly/20260107_034427/run_014/: config.json  training_manifest.json  training_results.csv
results/nightly/20260107_034427/run_015/: config.json  training_manifest.json
results/nightly/20260107_034427/run_016/: config.json  training_manifest.json
results/nightly/20260107_034427/run_017/: config.json
results/nightly/20260107_133012/: runs.jsonl
results/nightly/20260107_133012/best/: blend_feature_columns.txt  blender_direction_model.pkl  regime_model.pkl  training_manifest.json
results/nightly/20260107_133012/run_002/: training_manifest.json
results/nightly/20260107_133012/run_003/: config.json  training_manifest.json
results/nightly/20260107_133012/run_004/: training_manifest.json  training_results.csv
results/nightly/20260107_133012/run_005/: training_manifest.json
results/nightly/20260109_054436/: runs.jsonl
results/nightly/20260109_054519/: runs.jsonl
results/nightly/20260109_054519/run_007/: config.json
results/nightly/20260109_054519/run_009/: config.json
results/nightly/20260109_054519/run_010/: config.json
results/nightly/20260109_055313/: runs.jsonl
results/nightly/20260109_055313/run_002/: config.json
results/nightly/20260109_055313/run_006/: config.json
results/nightly/20260109_055313/run_008/: config.json
results/nightly/20260109_060121/: runs.jsonl
results/nightly/20260109_060121/run_001/: config.json  training_manifest.json
results/nightly/20260109_060121/run_002/: training_manifest.json  training_results.csv
results/nightly/20260109_060121/run_003/: training_manifest.json  training_results.csv
results/nightly/20260109_060121/run_004/: training_manifest.json
results/nightly/20260109_060121/run_005/: training_manifest.json  training_results.csv
results/nightly/20260109_060121/run_006/: training_manifest.json
results/nightly/20260109_060121/run_007/: training_manifest.json
results/nightly/20260109_060121/run_008/: training_manifest.json
results/nightly/20260109_060121/run_009/: training_manifest.json
results/nightly/20260109_060121/run_010/: training_manifest.json
results/nightly/20260109_131031/: best.json  runs.jsonl
results/nightly/20260109_131031/best/: blender_direction_model.pkl  blender_model.pkl  regime_model.pkl
results/nightly/20260109_131031/run_001/: training_manifest.json
results/nightly/20260109_131031/run_002/: training_manifest.json
results/nightly/20260109_131031/run_003/: training_manifest.json
results/nightly/20260109_131031/run_004/: config.json  training_manifest.json  training_results.csv
results/nightly/20260109_131031/run_005/: config.json  training_manifest.json
results/nightly/20260109_131031/run_006/: training_manifest.json
results/nightly/20260109_131031/run_007/: training_manifest.json
results/nightly/20260109_131031/run_008/: training_manifest.json
results/nightly/20260109_131031/run_009/: training_manifest.json
results/nightly/20260109_131031/run_010/: training_manifest.json
results/nightly/20260109_150639/: runs.jsonl
results/nightly/20260109_150639/best/: blender_direction_model.pkl  blender_model.pkl  feature_columns.txt  regime_model.pkl
tests/: __init__.py  conftest.py  test_backtest_indexing.py  test_backtest_logic.py  test_backtest_math_invariants.py  test_backtest_structures.py  test_ev_consistency.py  test_future_leak.py  test_no_lookahead.py  test_schema_and_contracts.py  test_time_alignment.py  test_tools_init.py  test_train_invariants.py  test_train_pipeline.py
tests/mocks/: __init__.py  mock_candles.py  mock_features.py  mock_labels.py  mock_trades.py
tools/: __init__.py  audit_backtest.py  bootstrap_equity.py  grid_search_recent.py  nightly_runner.py  profile_data.py  timeseries_cv.py  walk_forward.py
(+6 files in other folders)
