# pyproject.toml
# Hybridyzer - Bitcoin Trading Bot Verifier Configuration

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridyzer"
version = "0.1.0"
description = "Bitcoin trading bot with regime detection and signal blending"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hybridyzer Team"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.82.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
gpu = [
    # RAPIDS libraries (install via conda)
    # cudf-cu12, cuml-cu12, cupy-cuda12x
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "data*", "tools*", "tests*"]

# =============================================================================
# MYPY Configuration - Strict Mode
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
show_error_codes = true
show_column_numbers = true

# Strict mode options
strict = true

# Exclude generated files and third-party
exclude = [
    "venv/",
    "__pycache__/",
    "build/",
    "dist/",
    "*.egg-info/",
]

# Per-module overrides for gradual adoption
[[tool.mypy.overrides]]
module = [
    "cudf.*",
    "cuml.*",
    "cupy.*",
    "mlflow.*",
    "shap.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "modules.*",
    "data.*",
]
# Allow less strict typing for legacy modules during transition
disallow_untyped_defs = false
check_untyped_defs = true

# =============================================================================
# RUFF Configuration - Linting and Formatting
# =============================================================================
[tool.ruff]
# Target Python version
target-version = "py310"

# Line length (Black-compatible)
line-length = 100

# Exclude patterns
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PD",     # pandas-vet
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults
    "B905",   # zip without strict=
    "PD901",  # df is a bad variable name (common in our codebase)
    "PD011",  # Use .to_numpy() instead of .values
    "ARG001", # Unused function argument (common in sklearn-style interfaces)
    "ARG002", # Unused method argument
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can have unused imports and assertions
"tests/*" = ["F401", "S101", "ARG"]
# __init__.py files often have unused imports for re-export
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["core", "modules", "data", "tools"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-bugbear]
# Extend immutable calls for common patterns
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Unix-style line endings
line-ending = "lf"

# Enable auto-formatting of code examples in docstrings
docstring-code-format = true
docstring-code-line-length = 80

# =============================================================================
# PYTEST Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Custom markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU (deselect with '-m \"not gpu\"')",
    "integration: marks integration tests",
    "manual: marks tests that must be run manually (skipped in auto-test)",
]

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# COVERAGE Configuration
# =============================================================================
[tool.coverage.run]
source = ["core", "tools"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 60


